--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
     <!-- tailwind -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+<!-- font family -->
 </head>
 <body>
-    
+    <section class="game">
+
+    </section>
+    <section class="play-ground">
+
+    </section>
+    <section class="score">
+        
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
